<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.master.awesomeapplication.ProfileActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/btn_Find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Find"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_SignOut"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="18dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_Distance" />

    <Button
        android:id="@+id/btn_Change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="67dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="16dp" />

    <EditText
        android:id="@+id/editText_Distance"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Distance"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/btn_Find"
        app:layout_constraintRight_toRightOf="@+id/editText_Gender"
        android:layout_marginTop="35dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="36dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_Gender"
        app:layout_constraintTop_toTopOf="@+id/listView" />

    <EditText
        android:id="@+id/editText_Gender"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="Gender"
        android:layout_marginStart="19dp"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/editText_Distance"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="53dp"
        app:layout_constraintLeft_toRightOf="@+id/editText_Name" />

    <EditText
        android:id="@+id/editText_Name"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/editText_Gender"
        app:layout_constraintRight_toRightOf="@+id/editText_Age"
        android:layout_marginTop="42dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_Change"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_Age" />

    <EditText
        android:id="@+id/editText_Age"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="67dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/btn_SignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Out"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btn_Find"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="27dp"
        app:layout_constraintLeft_toLeftOf="@+id/btn_Find" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="223dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@+id/editText_Name"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="59dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_Name"
        app:layout_constraintHorizontal_bias="0.0" />
</android.support.constraint.ConstraintLayout>
